Fixes navbar collapse and changes footer social circle styles to be simpler.

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,4 +1,4 @@
-body {
+﻿body {
     padding-top: 2em;
     background-color: #ebebeb;
 }
@@ -76,77 +76,37 @@ section > #bgphotos {
     
 }
 
-.circle {
-    position: relative;    
-    z-index: 0;  
-	width: 25px;
-	height: 25px;
-	background: #5c2040;
-	-moz-border-radius: 50px;
-	-webkit-border-radius: 50px;
-	border-radius: 50px;
-}
-
-.socials {
-    position: relative;    
-    text-align: center;    
-    font-family: sans-serif;
-    font-size: 18px;
-    font-weight: bold;
-    color: #999999;   
-}
-
-.circle a {
-    color: #999999;
-}
-
-.circle a:hover {
-    text-decoration: none;
-    color: #efefef;
-}
-
-.circle a:link {
-    text-decoration: none;
-}
-
-.circle a:active {
-    text-decoration: none;
-}
-
-.circle a:visited {
-    text-decoration: none;
-}
-
 .circlebutton {
+    position: relative;
 	display: block;
 	width: 25px;
 	height: 25px;
 	border-radius: 50%;
+    font-family: sans-serif;
 	font-size: 18px;
 	font-weight: bold;
 	color: #999999;
 	line-height: 25px;
 	text-align: center;
-	background: #5c2040";
+	background: #5c2040;
 }
 
-.circlebutton a {
-    color: #999999;
-}
-
-.circlebutton a:hover {
+.circlebutton:hover {
     text-decoration: none;
     color: #efefef;
 }
 
-.circlebutton a:link {
+.circlebutton:link {
     text-decoration: none;
 }
 
-.circlebutton a:active {
+.circlebutton:active {
     text-decoration: none;
 }
 
-.circlebutton a:visited {
+.circlebutton:visited {
+    text-decoration: none;
+}
+.circlebutton:focus {
     text-decoration: none;
 }
